# qiskit-fall-fest-2025

./: .planqkignore  README.md  coin_toss.ipynb  openapi.yaml  planqk.json  pyproject.toml  requirements.txt
notebooks/: coin_toss.ipynb  service_sdk.ipynb
src/: __main__.py  program.py
